✨ feat: add FAQ section and UI components, configure Prettier and ESLint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,14 +12,14 @@
 	"eslint.format.enable": true,
 	"eslint.lintTask.enable": true,
 	"eslint.nodePath": "node_modules",
-	"eslint.useESLintClass": true,
-	"eslint.useFlatConfig": false,
+	"eslint.useFlatConfig": true,
 	"eslint.validate": [
 		"javascript",
 		"javascriptreact",
 		"astro",
 		"typescript",
-		"typescriptreact"
+		"typescriptreact",
+		"tsx"
 	],
 	"typescript.tsdk": "node_modules/typescript/lib"
 }
