--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"commit": "cz",
 		"postinstall": "astro sync",
 		"dev": "astro dev",
-		"format": "prettier --write .",
+		"format": "NODE_OPTIONS='--experimental-strip-types' prettier --write .",
 		"build": "astro build",
 		"preview": "astro preview",
 		"sync": "astro sync",
@@ -20,6 +20,9 @@
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/react": "^4.2.2",
+		"@radix-ui/react-accordion": "^1.2.3",
+		"@radix-ui/react-dialog": "^1.1.6",
+		"@radix-ui/react-slot": "^1.1.2",
 		"@tailwindcss/vite": "^4.0.17",
 		"@types/react": "^19.0.12",
 		"@types/react-dom": "^19.0.4",
@@ -37,6 +40,7 @@
 		"@commitlint/cli": "^19.8.0",
 		"@commitlint/types": "^19.8.0",
 		"@eslint/js": "^9.23.0",
+		"@types/eslint-plugin-jsx-a11y": "^6.10.0",
 		"@typescript-eslint/eslint-plugin": "^8.28.0",
 		"@typescript-eslint/parser": "^8.28.0",
 		"commitizen": "^4.3.1",
@@ -46,8 +50,6 @@
 		"eslint-config-prettier": "^10.1.1",
 		"eslint-import-resolver-typescript": "^4.3.1",
 		"eslint-plugin-astro": "^1.3.1",
-		"eslint-plugin-import": "^2.31.0",
-		"eslint-plugin-json": "^4.0.1",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"eslint-plugin-prettier": "^5.2.5",
 		"eslint-plugin-react": "^7.37.4",
